--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-docx==0.2.4
-Pillow==11.0.0
-protobuf==5.28.2
-PyPDF2==3.0.1
-python_docx==1.1.2
-pyttsx3==2.98
-SpeechRecognition==3.10.4
-streamlit==1.39.0
+docx
+Pillow
+protobuf
+PyPDF2
+python_docx
+pyttsx3
+SpeechRecognition
+streamlit
