--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-google.generativeai==0.2.0
+gTTS
 docx
 Pillow
 protobuf==3.20
@@ -7,3 +7,5 @@ python_docx
 pyttsx3
 SpeechRecognition
 streamlit
+googletrans
+nltk
